[gd_scene load_steps=3 format=3 uid="uid://b1o372l2424b8"]

[ext_resource type="Script" path="res://interface/dialogue/dialogue_box.gd" id="1_is44f"]
[ext_resource type="PackedScene" uid="uid://douayfw1xfdhm" path="res://interface/dialogue/avatar_box.tscn" id="2_d6wli"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_is44f")

[node name="NPCAvatar" parent="." instance=ExtResource("2_d6wli")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 198.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="PlayerAvatar" parent="." instance=ExtResource("2_d6wli")]
offset_left = 0.0
offset_top = 0.0
offset_right = 191.0
offset_bottom = 185.0

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 194.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputLabel" type="Label" parent="DialoguePanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 356.0
offset_right = 53.0
offset_bottom = 379.0
text = "Input:"

[node name="NPCText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 97.0
grow_horizontal = 2
text = "Here is where the NPC's dialogue will go when they are talking to the player. Here is where the NPC's dialogue will go when they are talking to the player."

[node name="PlayerInput" type="TextEdit" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = -65.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeaveButton" type="Button" parent="DialoguePanel"]
layout_mode = 0
offset_left = 1091.0
offset_top = 418.0
offset_right = 1144.0
offset_bottom = 449.0
text = "Leave"

[node name="TalkButton" type="Button" parent="DialoguePanel"]
layout_mode = 0
offset_left = 1091.0
offset_top = 390.0
offset_right = 1144.0
offset_bottom = 421.0
text = "Talk"

[connection signal="pressed" from="DialoguePanel/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="DialoguePanel/TalkButton" to="." method="_on_talk_button_pressed"]
